# raspi-dashboard

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  PLAN.md  README.md  SECURITY.md
.claude/skills/raspi-design/: SKILL.md
.github/workflows/: automerge.yaml  ci.yaml  cve-scan.yaml  dockerimage.yaml
backend/: .env.example  CLAUDE.md  Cargo.toml
backend/src/: auth.rs  beszel.rs  config.rs  error.rs  gatus.rs  lib.rs  main.rs  routes.rs  state.rs  trivy.rs
e2e/: Cargo.toml
e2e/src/: lib.rs
e2e/tests/: api.rs
frontend/: .prettierignore  CLAUDE.md  eslint.config.js  package.json  vite.config.ts
frontend/src/: app.html
frontend/src/lib/: api.ts  resource.svelte.ts
frontend/src/lib/components/: CvePanel.svelte  HealthGrid.svelte  MetricsCards.svelte  Wordmark.svelte
frontend/src/lib/styles/: halo.css
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/cve/: +page.svelte
frontend/static/: manifest.webmanifest
