[workspace]
resolver = "2"
members = [
    "backend",
    "e2e",
]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
axum = { version = "0.8", features = ["macros", "tokio", "tracing"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "fs", "set-header"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
chrono = { version = "0.4", features = ["serde"] }
mime_guess = "2"
sha2 = "0.11"
base64 = "0.22"
dotenvy = "0.15"
tempfile = "3"
wiremock = "0.6"
