[package]
name = "raspi-dashboard-backend"
version.workspace = true
edition.workspace = true

[[bin]]
name = "raspi-dashboard-backend"
path = "src/main.rs"

[lib]
name = "raspi_dashboard_backend"
path = "src/lib.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures-util = { workspace = true }
tokio-stream = { workspace = true }
chrono = { workspace = true }
mime_guess = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
dotenvy = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
wiremock = { workspace = true }
